sim/output_tb_gen_tb_20250406 06-24-18-414/16/make_output1.log
verilator -cc --exe -x-assign fast -Wall --assert --coverage-line -Wno-WIDTHEXPAND -Wno-BLKSEQ -Wno-VARHIDDEN -Wno-WIDTHTRUNC -Wno-UNUSEDSIGNAL -f input.vc top_module.v sim-main.cpp rfuzz-harness.cpp
- V e r i l a t i o n   R e p o r t: Verilator 5.032 2025-01-01 rev UNKNOWN.REV
- Verilator: Built from 0.000 MB sources in 0 modules, into 0.000 MB in 0 C++ files needing 0.000 MB
- Verilator: Walltime 0.001 s (elab=0.000, cvt=0.000, bld=0.000); cpu 0.001 s on 1 threads
cd obj_dir && make -f Vtop_module.mk
c++  -I.  -MMD -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include/vltstd -DVM_COVERAGE=1 -DVM_SC=0 -DVM_TIMING=0 -DVM_TRACE=0 -DVM_TRACE_FST=0 -DVM_TRACE_VCD=0 -faligned-new -fbracket-depth=4096 -fcf-protection=none -Qunused-arguments -Wno-bool-operation -Wno-c++11-narrowing -Wno-constant-logical-operand -Wno-non-pod-varargs -Wno-parentheses-equality -Wno-shadow -Wno-sign-compare -Wno-tautological-bitwise-compare -Wno-tautological-compare -Wno-uninitialized -Wno-unused-but-set-parameter -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-unused-variable     -std=gnu++17 -Os  -c -o rfuzz-harness.o ../rfuzz-harness.cpp
../rfuzz-harness.cpp:20:10: error: no member named 'clk' in 'Vtop_module'
   20 |     top->clk = 0;
      |     ~~~  ^
../rfuzz-harness.cpp:21:14: error: no member named 'clk' in 'Vtop_module'
   21 |         top->clk = 1;
      |         ~~~  ^
../rfuzz-harness.cpp:23:14: error: no member named 'clk' in 'Vtop_module'
   23 |         top->clk = !top->clk;
      |         ~~~  ^
../rfuzz-harness.cpp:23:26: error: no member named 'clk' in 'Vtop_module'
   23 |         top->clk = !top->clk;
      |                     ~~~  ^
../rfuzz-harness.cpp:26:14: error: no member named 'clk' in 'Vtop_module'
   26 |         top->clk = !top->clk;
      |         ~~~  ^
../rfuzz-harness.cpp:26:26: error: no member named 'clk' in 'Vtop_module'
   26 |         top->clk = !top->clk;
      |                     ~~~  ^
../rfuzz-harness.cpp:47:14: error: no member named 'clk' in 'Vtop_module'
   47 |         top->clk = !top->clk;
      |         ~~~  ^
../rfuzz-harness.cpp:47:26: error: no member named 'clk' in 'Vtop_module'
   47 |         top->clk = !top->clk;
      |                     ~~~  ^
../rfuzz-harness.cpp:50:14: error: no member named 'clk' in 'Vtop_module'
   50 |         top->clk = !top->clk;
      |         ~~~  ^
../rfuzz-harness.cpp:50:26: error: no member named 'clk' in 'Vtop_module'
   50 |         top->clk = !top->clk;
      |                     ~~~  ^
../rfuzz-harness.cpp:83:10: error: no member named 'clk' in 'Vtop_module'
   83 |     top->clk = 0;
      |     ~~~  ^
../rfuzz-harness.cpp:84:14: error: no member named 'clk' in 'Vtop_module'
   84 |         top->clk = 1;
      |         ~~~  ^
../rfuzz-harness.cpp:86:14: error: no member named 'clk' in 'Vtop_module'
   86 |         top->clk = !top->clk;
      |         ~~~  ^
../rfuzz-harness.cpp:86:26: error: no member named 'clk' in 'Vtop_module'
   86 |         top->clk = !top->clk;
      |                     ~~~  ^
../rfuzz-harness.cpp:89:14: error: no member named 'clk' in 'Vtop_module'
   89 |         top->clk = !top->clk;
      |         ~~~  ^
../rfuzz-harness.cpp:89:26: error: no member named 'clk' in 'Vtop_module'
   89 |         top->clk = !top->clk;
      |                     ~~~  ^
../rfuzz-harness.cpp:110:14: error: no member named 'clk' in 'Vtop_module'
  110 |         top->clk = !top->clk;
      |         ~~~  ^
../rfuzz-harness.cpp:110:26: error: no member named 'clk' in 'Vtop_module'
  110 |         top->clk = !top->clk;
      |                     ~~~  ^
../rfuzz-harness.cpp:113:14: error: no member named 'clk' in 'Vtop_module'
  113 |         top->clk = !top->clk;
      |         ~~~  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make[1]: *** [rfuzz-harness.o] Error 1
make: *** [run] Error 2
